--- a/gateway/package.json
+++ b/gateway/package.json
@@ -15,7 +15,6 @@
     "wrangler": "^3.0.0"
   },
   "dependencies": {
-    "itty-router": "^4.0.23",
-    "viem": "^1.18.6"
+    "itty-router": "^4.0.23"
   }
 }
