--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,15 +5,22 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
+    "build": "tsc --noEmit",
     "format": "biome format . --write"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.3.3",
     "@cloudflare/workers-types": "^4.20230419.0",
+    "@types/pg": "^8.10.9",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
   },
   "dependencies": {
-    "itty-router": "^4.0.23"
+    "@ensdomains/ccip-read-cf-worker": "^0.0.1",
+    "ethers": "^5.7.2",
+    "itty-router": "^4.0.23",
+    "kysely": "^0.26.3",
+    "pg": "^8.11.3",
+    "zod": "^3.22.4"
   }
 }
